tests/parser/tests/cases/should_fail/issue_223/case.stderr
error: expected value assignment after type annotation within named tuple
 --> $DIR/case.hash:1:36
1 |   wrap := (res: Result<T, (int, str)>): Result<T, IoError> => match res {
  |                                      ^ here
2 |   };
  = help: consider adding a `=`
